crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__missing_type_body_token.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class MissingTypeBody;

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "MissingTypeBody" @ 6..21
      ClassBody
        Semicolon ";" @ 21..22
        ClassBodyMemberList
  Eof "" @ 23..23 leading=[Newline "\n"]

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=21..22 message="expected type body"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(21), end: TextSize(22) }) message=expected type body
