crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__module_annotation.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
@Deprecated module com.example.annotated {}

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  ModuleDeclaration
    AnnotationList
      Annotation
        At "@" @ 0..1
        Name
          Identifier "Deprecated" @ 1..11 trailing=[Whitespace " "]
    Identifier "module" @ 12..18 trailing=[Whitespace " "]
    QualifiedName
      QualifiedNameSegmentNode
        AnnotationList
        Identifier "com" @ 19..22
      Dot "." @ 22..23
      NameSegmentDotList
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "example" @ 23..30
        Dot "." @ 30..31
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "annotated" @ 31..40 trailing=[Whitespace " "]
    LBrace "{" @ 41..42
    ModuleDirectiveList
    RBrace "}" @ 42..43
  CompilationUnitDeclarationList
  Eof "" @ 44..44 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
