crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__module_body.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
module m { requires a; /* module */ + ; exports p; }

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ModuleDeclaration
      AnnotationList
      Identifier "module" @ 0..6 trailing=[Whitespace " "]
      Name
        Identifier "m" @ 7..8 trailing=[Whitespace " "]
      LBrace "{" @ 9..10 trailing=[Whitespace " "]
      ModuleDirectiveList
        RequiresDirective
          Identifier "requires" @ 11..19 trailing=[Whitespace " "]
          RequiresModifierList
          Name
            Identifier "a" @ 20..21
          Semicolon ";" @ 21..22 trailing=[Whitespace " ", BlockComment "/* module */", Whitespace " "]
        BogusModuleDirective
          Plus "+" @ 36..37 trailing=[Whitespace " "]
          Semicolon ";" @ 38..39 trailing=[Whitespace " "]
        ExportsDirective
          Identifier "exports" @ 40..47 trailing=[Whitespace " "]
          Name
            Identifier "p" @ 48..49
          Semicolon ";" @ 49..50 trailing=[Whitespace " "]
      RBrace "}" @ 51..52
  Eof "" @ 53..53 leading=[Newline "\n"]

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=36..37 message="unexpected token in module declaration"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(36), end: TextSize(37) }) message=unexpected token in module declaration
